Fix rendering of aria-hidden element (sample)
Is was not 'hidden' by default (prince)

TODO:
the details are not looked into.

--- a/tosixinch/data/css/sample.t.css
+++ b/tosixinch/data/css/sample.t.css
@@ -116,6 +116,10 @@ span.tsi-href-visible {
     font-size: .7em;
 }
 
+/* test */
+*[aria-hidden] {
+  display: none;
+}
 
 
 {% if prince %}
